--- a/index2.html
+++ b/index2.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="css/swiper.min.css">
 
     <script>
-        // $(document).ready(function(){
-        //     $('#fullpage').fullpage({
-        //         verticalCentered: true,
+        $(document).ready(function(){
+            $('#fullpage').fullpage({
+                verticalCentered: true,
                 
-        //     });
-        // });
+            });
+        });
     </script>
 
 </head>
